<resources>
    <string name="app_name">Hydroseed</string>
    <string name="calculate">Calculate</string>

    <string-array name="Seeds">
        <item>White Yarrow</item>
        <item>Mariposa Blue Wildrye</item>
        <item>California Poppy</item>
        <item>California Goldfields</item>
        <item>Tidytips</item>
        <item>Bicolor Lupine</item>
        <item>Sky Lupine</item>
        <item>Baby Blue Eyes</item>
        <item>Tomcat Clover</item>
        <item>Three Weeks Fescue</item>
    </string-array>
    <string-array name="TankSize">
        <item>Select Tank Size</item>
        <item>1500 gallon</item>
        <item>3000 gallon</item>
    </string-array>
    <string name="title_activity_application_rate_page">ApplicationRatePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="decimal">.</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="historyButton">History</string>
    <string name="enter_acreage">Enter acreage</string>
    <string name="todo">TODO</string>
    <string name="acresSwitch">Acres</string>
    <string name="_1500">1500</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //---------Strings for application rate page--------//
    <string name="cy">cy</string>
    <string name="additive">Additive:</string>
    <string name="get_results">Get Results</string>
    <string name="fiber">Fiber:</string>
    <string name="tackifier">Tackifier:</string>
    <string name="seed">Seed:</string>
    <string name="fertilizer">Fertilizer:</string>
    <string name="compost">Compost:</string>
    <string name="revert_to_default_rates">Revert To Default Rates</string>
    <string name="fertilizer2">Fertilizer</string>
    <string name="additive2">Additive</string>
    <string name="figure_1">Figure 1</string>
    <string name="a_z">##-######</string>
    <string name="acres_sq_ft">Acres / Sq.ft</string>
    <string name="hydroseed">Hydroseed</string>
    <string name="refer_to_fig_1">Refer to Fig 1</string>
    <string name="yards_3">Yards^3</string>
    <string name="hydro_mulch">Hydromulch</string>
    <string name="figure_2">Figure 2</string>
    <string name="save_data">Save Data</string>
    <string name="share_results">Share Results</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate (lb/acre)</string>
    <string name="tackifier2">Tackifier</string>
    <string name="bags_tank">bags / Tank</string>
    <string name="project_name_optional">Project Name (Optional)</string>
    <string name="fiber2">Fiber</string>
    <string name="bags_50lbs">Bags(50lbs)</string>
    <string name="lbs_area">lbs/area</string>
    <string name="seed2">Seed</string>
    <string name="lbs">lbs</string>
    <string name="refer_to_fig_2">Refer to Fig 2</string>
    <string name="ft_3_area_unit">Ft^3 / area unit</string>
    <string name="compost2">Compost</string>
    <string name="output">Output</string>
    <string name="input">Input</string>
    <string name="materials">Materials    </string>
    //--------------------------------------------------//

</resources>