<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#969696">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/caltrans_svg50opacity" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#5f5d5d"
        android:gravity="bottom|center|end"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/historyButton"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/switchbg"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:shadowColor="#00FFFFFF"
            android:text="@string/historyButton"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textScaleX="1"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="#DDDDDD"
            app:backgroundTintMode="multiply" />

        <Space
            android:layout_width="104dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sqftSwitch"

            android:layout_width="100dp"
            android:layout_height="0dp"
            android:background="@drawable/switchbg"
            android:gravity="center|right"
            android:text="@string/acresSwitch"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/tankSwitch"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@drawable/switchbg"
            android:gravity="center|right|center_horizontal|center_vertical"
            android:text="@string/_1500"
            android:textColor="#FFFFFF"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />

    </TableRow>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Tank Size (gal)"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:gravity="center"
        android:text="Input Type"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/calculate"
        app:backgroundTint="#DDDDDD"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acreageSource" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            tools:layout_height="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_background"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="."
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_background"
                android:text="CLR"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold|italic"
                android:typeface="normal"
                app:backgroundTint="#DDDDDD"
                app:backgroundTintMode="multiply" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/acreageSource"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="#202222"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/enter_acreage"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>